<resources>
    <string name="app_name">Frendzapp</string>
    <string name="acb_search_title">Search</string>
    <string name="acb_add_chat_title">Add Chat</string>
    <string name="acb_delete_friend_title">Delete Friend</string>
    <string name="acb_add_friend_to_chat_title">Add friend to Chat</string>
    <string name="acb_leave_chat_title">Leave Chat</string>
    <string name="acb_chat_details_title">Chat details</string>
    <string name="acb_chat_attach_title">Add attach</string>
    <string name="nvd_title_contacts">Contacts</string>
    <string name="nvd_title_web_room">Web room</string>
    <string name="nvd_title_chats">Chats</string>
    <string name="nvd_title_settings">Settings</string>
    <string name="nvd_title_invite_friends">Invite Friends</string>
    <string name="nvd_title_feedback">Feedback</string>
    <string name="nvd_open">Open navigation drawer</string>
    <string name="nvd_close">Close navigation drawer</string>
    <string name="nvd_title_call">Call</string>
    <string-array name="nvd_items_array">
        <item>Home</item>
        <item>Account</item>
        <item>Chat setting</item>
        <item>Notification</item>
        <item>Frendzapp lock</item>
        <item>Feedback</item>
        <item>Invite friends</item>
        <item>About</item>
    </string-array>
    <string-array name="nvd_icon_array">
        <item>@drawable/home</item>
        <item>@drawable/account_key</item>
        <item>@drawable/chat1</item>
        <item>@drawable/notification</item>
        <item>@drawable/locked</item>
        <item>@drawable/feedback_note</item>
        <item>@drawable/share1</item>
        <item>@drawable/about_us</item>
    </string-array>
    <string name="apa">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia,.</string>
    <string name="lnd_connect_with_facebook">Connect with Facebook</string>
    <string name="lnd_have_account">Already have an account?</string>
    <string name="lnd_sign_up">Sign Up with Email</string>
    <string name="lnd_no_app_version">Couldn\'t get app version</string>
    <string name="lnd_version">v. %1$s</string>
    <string name="lgn_forgot_password">Forgot password?</string>
    <string name="lgn_password_hint">Password</string>
    <string name="lgn_log_in_with_facebook">Log in with Facebook</string>
    <string name="lgn_login">Log In</string>
    <string name="lgn_email_hint">Email</string>
    <string name="lgn_remember_me">Remember Me</string>
    <string name="lgn_error">This username has not authenticated yet, please check your credentials</string>
    <string name="relgn_success">Relogin was successfully executed after  losing the Internet connection</string>
    <string name="relgn_fail">Relogin was failed. Forse app restart will be executed</string>
    <string name="relgn_forse_message">Relogin was failed.Are you agree to start forse relogin which restart whole app</string>
    <string name="dont_forget_relogin">Please don\'t forget to relogin to restore all app features</string>
    <string name="fpw_forgot_password_title">Forgot Password</string>
    <string name="fpw_email">Email</string>
    <string name="fpw_reset_password">Reset Password</string>
    <string name="fpw_not_email_field_entered">Please enter email</string>
    <string name="fpw_email_was_sent">Mail was sent to %1$s</string>
    <string name="sup_fullname_hint">Full Name</string>
    <string name="sup_email_hint">Email</string>
    <string name="sup_choose_user_picture">Choose user picture</string>
    <string name="sup_sign_up">Sign Up</string>
    <string name="uag_user_agreement_title">User Agreement</string>
    <string name="uag_user_agreement">By clicking Sign Up, you agree to \nFrendzapp <b><u>User Agreement</u></b></string>
    <string name="uag_policy_link">http://www.frendzapp.com/term-and-condition.html</string>
    <string name="frl_global_search">Global Search</string>
    <string name="frl_friends">Friends</string>
    <string name="frl_all_users">All Users</string>
    <string name="frl_no_friends">Oops…\nYou don\'t have any friends,\ntap search icon to find them \nor invite new ones.</string>
    <string name="frl_not_found_users">Sorry… no users</string>
    <string name="frl_pending_status">Waiting…</string>
    <string name="frl_pending_request_status">Pending contact request</string>
    <string name="frl_column_header_name_requests">Requests</string>
    <string name="frl_column_header_name_my_contacts">My Contacts</string>
    <string name="frl_column_header_name_invite_friend">Invite Friends</string>
    <string name="frl_column_header_name_all_users">All Users</string>
    <string name="frl_dlg_reject_friend">Do you really want to reject contact request from %1$s?</string>
    <string name="frd_title">Details</string>
    <string name="frd_default_status">I enjoy using Frendzapp!</string>
    <string name="frd_video_call">Video Call</string>
    <string name="frd_audio_call">Audio Call</string>
    <string name="frd_chat">Chat</string>
    <string name="frd_mobile">MOBILE</string>
    <string name="frd_dlg_remove_friend">Do you really want to delete %1$s from your contact list?</string>
    <string name="dlg_message">Message</string>
    <string name="dlg_hint_message">Type a message</string>
    <string name="dlg_no_chats">Oops…\nYou don\'t have any chats,\n tap \'+\' icon to create new group chat \nor go in private chat \nvia Friends Details page"</string>
    <string name="dlg_reply">Reply</string>
    <string name="dlg_user_is_not_friend">User is not your friend</string>
    <string name="dlg_confirm_sending_attach">Do you really want to send attachment?</string>
    <string name="dlg_select_attach_type">Select attachments type</string>
    <string-array name="dlg_attach_types_array">
        <item>Take Photo</item>
        <item>From Library</item>
    </string-array>
    <string name="gdl_ctx_menu_reply">Reply</string>
    <string name="gdl_ctx_menu_prv_message">Private Message</string>
    <string name="gdl_ctx_menu_video_call">Video Call</string>
    <string name="gdl_ctx_menu_profile">View Profile</string>
    <string name="dlgs_ctx_menu_remove">Delete dialog</string>
    <string name="gdd_title">Group Details</string>
    <string name="gdd_leave_group">Leave group</string>
    <string name="gdd_participants">%1$d participants</string>
    <string name="gdd_online_participants">%1$d/%2$d online</string>
    <string name="gdd_name_not_entered">Please fill group name</string>
    <string name="gdd_all_friends_is_in_group">You can\'t add new friend, because all existing friends are added in this group chat</string>
    <string name="gdd_group_info_is_loading">Group info is loading, please wait…</string>
    <string name="ndl_title">New Group Chat</string>
    <string name="ndl_ac_mode_title">Group chat participants:</string>
    <string name="ndl_no_friends_for_new_chat">You don\'t have any Friends for creating New Chat</string>
    <string name="pref_title_profile_and_details">Profile and details</string>
    <string name="pref_title_presence">Presence</string>
    <string name="pref_title_push_notifications">Push Notifications</string>
    <string name="pref_title_media">Media</string>
    <string name="stn_profile">Profile</string>
    <string name="stn_logout">Log Out</string>
    <string name="stn_change_password">Change Password</string>
    <string name="stn_push_notifivation">Push Notification</string>
    <string name="stn_version">Version %1$s</string>
    <string name="cpw_change_password_title">Change Password</string>
    <string name="cpw_change">Change</string>
    <string name="cpw_old_password">Old Password</string>
    <string name="cpw_new_password">New Password</string>
    <string name="cpw_not_old_password_field_entered">Please enter old password</string>
    <string name="cpw_not_new_password_field_entered">Please enter new password</string>
    <string name="prf_full_name">Full Name</string>
    <string name="prf_change">Change</string>
    <string name="prf_title">Profile</string>
    <string name="prf_email">Email</string>
    <string name="prf_phone">Phone</string>
    <string name="prf_status_message">Status Message</string>
    <string name="prf_done">Done</string>
    <string name="afg_title">Add Friends</string>
    <string name="inf_header_label">Let your other friends know about \n Q-municate by sending them private invitations</string>
    <string name="inf_select_from_facebook">From Facebook</string>
    <string name="inf_select_from_contacts">From Contacts</string>
    <string name="inf_from_facebook">(invite via Facebook)</string>
    <string name="inf_from_contacts">(invite via Email)</string>
    <string name="inf_send">Send</string>
    <string name="inf_choose_email_provider">Choose an email provider:</string>
    <string name="inf_subject_of_invitation">Frendzapp</string>
    <string name="inf_body_of_invitation">Dear friend, use Frendzapp application to reach me!\nDownload it here: http://frendzapp.com/</string>
    <string name="inf_url_to_facebook_avatar">https://graph.facebook.com/%1$s/picture?type=large</string>
    <string name="inf_fb_wall_param_name">Frendzapp</string>
    <string name="inf_fb_wall_param_description">Dear friend, use Frendzapp application to reach me!\nDownload it here: http://frendzapp.com/</string>
    <string name="inf_fb_wall_param_link">http://q-municate.com/</string>
    <string name="inf_fb_wall_param_picture">http://files.quickblox.com/ic_launcher.png</string>
    <string name="inf_fb_wall_param_place">155021662189</string>
    <string name="inf_fb_request_canceled">Request cancelled</string>
    <string name="inf_fb_feed_result_posted">Posted</string>
    <string name="inf_fb_feed_result_publish_canceled">Publish cancelled</string>
    <string name="inf_fb_feed_result_posting_error">Error posting link</string>
    <string name="fdb_feedback_title">Feedback Description</string>
    <string name="fdb_feedback_label">
        Hope you are enjoying our app features, if you found any bug or error plz feel free to write us. Improvement , Suggestions most welcome....
        /n Thanks,
        /n Team FrendzApp</string>
    <string name="fdb_bug_type">Bug</string>
    <string name="fdb_improvement_type">Improvement</string>
    <string name="fdb_suggestion_type">Suggestion</string>
    <string name="fdb_support_email">ashish@techenvision.in</string>
    <string name="fdb_choose_email_provider">Choose an email provider:</string>
    <string name="fdb_write_email">Write an Email</string>
    <string name="dlg_click_back_again">Please click BACK again to exit</string>
    <string name="dlg_wait_please">Please, wait</string>
    <string name="dlg_not_all_fields_entered">Please fill all empty input fields</string>
    <string name="dlg_not_fullname_field_entered">Please enter Full Name</string>
    <string name="dlg_not_email_field_entered">Please enter email</string>
    <string name="dlg_not_password_field_entered">Please enter password</string>
    <string name="dlg_passwords_not_equal">New password and confirmation are not equal</string>
    <string name="dlg_old_password_wrong">Wrong old password</string>
    <string name="dlg_empty_email">Email can\'t be empty</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="txt_name">Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_birthdate">Birth date</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_gallery">Gallery</string>
    <string name="txt_video">Video</string>
    <string name="txt_audio">Audio</string>
    <string name="txt_file">File</string>
    <string name="txt_location">Location</string>
    <string name="txt_contact">Contact</string>
</resources>