<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_name"
                android:textSize="@dimen/text_size_middle"/>
            <EditText
                android:id="@+id/fullname_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_email"
                android:textSize="@dimen/text_size_middle"/>
            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_birthdate"
                android:textSize="@dimen/text_size_middle"/>
            <TextView
                android:id="@+id/textView3"
                android:layout_marginLeft="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:gravity="center_horizontal"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <ImageView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/img_calender"
                    android:layout_gravity="right"
                    android:onClick="setDate"
                    android:src="@drawable/pic_calendar"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
    <TextView
        android:textSize="@dimen/text_size_16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/txt_submit"
        android:background="@color/black"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/layout_height_40dp"
        android:layout_margin="@dimen/margin_16dp"
        android:text="@string/txt_submit"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>